--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -71,6 +71,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Ventanas\" />
     <Folder Include="WinForms\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
