--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinForms\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WinForms\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -72,7 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Ventanas\" />
-    <Folder Include="WinForms\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
