--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinForms\AcercaDe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WinForms\AcercaDe.Designer.cs">
+      <DependentUpon>AcercaDe.cs</DependentUpon>
+    </Compile>
     <Compile Include="WinForms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WinForms\AcercaDe.resx">
+      <DependentUpon>AcercaDe.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WinForms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,8 +92,8 @@
     <Folder Include="Ventanas\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="WinForms\Login_src\FondoMorado.jpg" />
-    <Content Include="WinForms\Login_src\IconoLogin.ico" />
+    <Content Include="WinForms\src\FondoMorado.jpg" />
+    <Content Include="WinForms\src\IconoLogin.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
