--- a/Layers/Layers.csproj
+++ b/Layers/Layers.csproj
@@ -41,11 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bussiness\Validations.cs" />
+    <Compile Include="Data\Connection.cs" />
+    <Compile Include="Data\DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Bussiness\" />
-    <Folder Include="Data\" />
     <Folder Include="Presentation\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
