--- a/UI/App.config
+++ b/UI/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add connectionString="Data Source=server-db-system-prog2.database.windows.net;Initial Catalog=SellPoint;User Id=admin-system;Password=Mena origin12@" name="db_connection"/>
+	</connectionStrings>
 </configuration>
