--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -149,6 +149,7 @@
     <Content Include="WinForms\src\IconAcercaDe.ico" />
     <Content Include="WinForms\src\IconoLogin.ico" />
     <Content Include="WinForms\src\Sistema.jpg" />
+    <Content Include="WinForms\src\SplashIco.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
